<?xml version="1.0"?>
<package>
  <name>pointcloud_from_bag_to_frame</name>
  <version>0.0.1</version>
  <description>The pointcloud_from_bag_to_frame package</description>


  <maintainer email="zwyd1234@outlook.com">adamshan</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
</package>
